<resources>
    <string name="app_name">LoginExample</string>
    <string name="f_choose_log_in">Log in</string>
    <string name="f_choose_sign_up">Sign up</string>
    <string name="f_login_login">Log in</string>
    <string name="f_sign_up_sign_up">Sign Up</string>
    <string name="f_sign_up_new_email">New email</string>
    <string name="f_sign_up_new_password">New password</string>
    <string name="f_login_email_adsress">Email address</string>
    <string name="f_login_password_adress">Password</string>
</resources>
