<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:padding="@dimen/padding_default">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/f_sign_up_email_text_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/f_sign_up_email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:hint="@string/f_sign_up_new_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="@dimen/padding_default" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/f_sign_up_password_text_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/f_sign_up_email_text_container">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/f_sign_up_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/f_sign_up_new_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/padding_default" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/f_signUp_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/f_sign_up_sign_up" />

</RelativeLayout>